--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <html>
 <head></head>
 <body>
+
+<link rel="stylesheet" href="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+<script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
 <script src="school.js"></script>
-<a id="linkage" href="http://www.jasonmayes.com/projects/twitterApi/" target="_blank">Visit my website</a>
-<h2>Query 1: My latest tweet</h2>
+
+<div data-role="page" id="page1">
+    <div data-role="header">
+        <h1>Get A Twitter User's Sentiemnt Level! WOW</h1>
+    </div>
+    <div role="main" class="ui-content">
+        <label for="basic">Twitter user:</label>
+        <input type="text" name="name" id="basic" value="">
+    </div>
+    <div id="xx">
+        <input type="button" value="Search" id="myButton" >
+    </div>
+</div>
+<ul data-role="listview" id="myList">
+
+</ul>
 <div id="example1"></div>
-<h2>Query 2: What people are saying about me!</h2>
 
-
-
-<a class="twitter-timeline"  href="https://twitter.com/hashtag/computer" data-widget-id="866716803317194753">#corgi Tweets</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
+</body>
 </html>
