new back button

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
 </ul>
 
 <div data-role="page" id="page2" data-add-back-btn="true">
-    <h1>Here are the tweets</h1>
-    <a href="#page1" data-icon="delete">Back fr</a>
+    <div data-role="header">
+        <h1>Here are the tweets</h1>
+        <a href="#page1" data-role="button" data-icon="back">Back</a>
+    </div>
 
 <div id="example1"></div>
 </div>
