--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div data-role="page" id="page1">
     <div data-role="header">
-        <h1>Get A Twitter User's Sentiemnt Level! WOW</h1>
+        <h1>Get A Twitter User's Sentiment Level! WOW</h1>
     </div>
     <div role="main" class="ui-content">
         <label for="basic">Twitter user:</label>
@@ -32,7 +32,7 @@
 <div data-role="page" id="page2" data-add-back-btn="true">
     <div data-role="header">
         <h1>Here are the tweets</h1>
-        <a href="#page1" data-role="button" data-icon="back">Back</a>
+        <a href="#page1" data-role="button" data-icon="back" onclick="clearInput()">Back</a>
     </div>
 
 <div id="example1"></div>
