fixed some comma issues

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     </div>
     <div role="main" class="ui-content">
         <label for="basic">Twitter user:</label>
-        <input type="text" name="name" id="basic" value="">
+        <input type="text" value="realdonaldtrump"name="name" id="basic" >
     </div>
     <div id="xx">
-        <input type="button" value="Search" id="myButton" href="#page2">
+        <input type="button"  value="Search" id="myButton" href="#page2">
     </div>
 </div>
 <ul data-role="listview" id="myList">
