--- a/index.html
+++ b/index.html
@@ -34,8 +34,29 @@
         <h1>Here are the tweets</h1>
         <a href="#page1" data-role="button" data-icon="back" onclick="clearInput()">Back</a>
     </div>
+    <div>
+        <h2 id="values"></h2>
+        <ol data-role="listview" id="example2">
+        </ol>
+    </div>
 
-<div id="example1"></div>
+
+</div>
+
+
+
+<div data-role="page" id="page3" data-add-back-btn="true">
+    <div data-role="header">
+        <h1>Here are the tweets</h1>
+        <a href="#page1" data-role="button" data-icon="back" onclick="clearInput()">Back</a>
+    </div>
+
+    <div>
+        <ol data-role="listview" id="example1">
+        </ol>
+    </div>
+
+
 </div>
 
 </body>
