--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <script src="school.js"></script>
     <script src="schools.js"></script>
-
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
@@ -33,6 +33,8 @@
     <div data-role="header">
         <h1>Here are the tweets</h1>
         <a href="#page1" data-role="button" data-icon="back" onclick="clearInput()">Back</a>
+    </div>
+    <div id="loadingScreen">
     </div>
     <div>
         <h2 id="values"></h2>
