--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
         <h2 id="values"></h2>
         <ol data-role="listview" id="example2">
         </ol>
+        <div id="hideButton">
         <input type="button"  value="Go to List of Tweets" id="tweetView" href="#page3">
     </div>
+        </div>
 
 
 </div>
