--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div data-role="page" id="page2" data-add-back-btn="true">
     <div data-role="header">
         <h1>Tweet Tone Score</h1>
-        <a href="#page1" data-role="button" data-icon="back" onclick="clearInput()">Back</a>
+        <a href="#page1" data-role="button" data-icon="back" onclick="clearInput()" id="back1">Back</a>
     </div>
 
     <div id="loadingScreen">
@@ -57,7 +57,7 @@
 <div data-role="page" id="page3" data-add-back-btn="true">
     <div data-role="header">
         <h1>Here are the tweets</h1>
-        <a href="#page2" data-role="button" data-icon="back">Back</a>
+        <a href="#page2" data-role="button" data-icon="back" id="back2">Back</a>
     </div>
 
     <div>
