fixed the header cutoff, change the font size,

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <script src="school.js"></script>
     <script src="schools.js"></script>
     <link rel="stylesheet" href="style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 </head>
 <body>
 
 
 <div data-role="page" id="page1">
     <div data-role="header">
-        <h1>Get A Twitter User's Sentiment Level! WOW</h1>
+        <h1>Twitter Sentiment</h1>
     </div>
     <div role="main" class="ui-content">
         <label for="basic">Twitter user:</label>
@@ -24,7 +25,7 @@
         </div>
     </div>
     <div id="xx">
-        <input type="button"  value="Search" id="myButton" href="#page2">
+        <input type="button" value="Search" id="myButton" href="#page2"  >
     </div>
 </div>
 <ul data-role="listview" id="myList">
