Added so that it says "overal" next to postive or negaticve

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <div data-role="page" id="page2" data-add-back-btn="true">
     <div data-role="header">
-        <h1>Tweet Tone Score</h1>
+        <h1>Scores</h1>
         <a href="#page1" data-role="button" data-icon="back" onclick="clearInput()" id="back1">Back</a>
     </div>
 
