clears error message

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </div>
     <div id="xx">
-        <input type="button" value="Search" id="myButton" href="#page2"  >
+        <input type="button" value="Search" id="myButton" href="#page2"   style="background: #00aced; color: white;">
     </div>
 </div>
 <ul data-role="listview" id="myList">
