--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <ol data-role="listview" id="example2">
         </ol>
         <div id="hideButton">
-        <input type="button"  value="Go to List of Tweets" id="tweetView" href="#page3">
+        <input type="button"  value="Go to List of Tweets" id="tweetView" href="#page3" style="background: #00aced; color: white;">
     </div>
         </div>
 
