clears error messagdefdseddsgrweagrw

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <script src="school.js"></script>
@@ -19,6 +20,34 @@
         <h1>Twitter Sentiment</h1>
     </div>
     <div role="main" class="ui-content">
+        <canvas id="myChart" width="400" height="400"></canvas>
+        <script>
+            var ctx = document.getElementById("myChart").getContext('2d');
+            var scatterChart = new Chart(ctx, {
+                type: 'scatter',
+                data: {
+                    datasets: [{
+                        label: 'Scatter Dataset',
+                        data: [{
+                            y: 0
+                        }, {
+                            y: 10
+                        }, {
+                            y: 5
+                        }]
+                    }]
+                },
+                options: {
+                    scales: {
+                        xAxes: [{
+                            type: 'linear',
+                            position: 'bottom'
+                        }]
+                    }
+                }
+            });
+
+        </script>
         <label for="basic">Twitter user:</label>
         <div id="textInput">
         <input type="text" value=""name="name" id="basic" >
@@ -56,6 +85,7 @@
 
 
 <div data-role="page" id="page3" data-add-back-btn="true">
+
     <div data-role="header">
         <h1>Here are the tweets</h1>
         <a href="#page2" data-role="button" data-icon="back" id="back2">Back</a>
@@ -64,10 +94,26 @@
     <div>
         <ol data-role="listview" id="example1" >
         </ol>
+        <input type="button"  value="Go to Graph" id="graphView" href="#page4" style="background: #00aced; color: white;">
     </div>
 
 
 </div>
+
+
+<div data-role="page" id="page4" data-add-back-btn="true">
+    <div data-role="header">
+        <h1>Graphing</h1>
+        <a href="#page3" data-role="button" data-icon="back" id="back3">Back</a>
+    </div>
+
+    <div>
+
+    </div>
+
+
+</div>
+
 
 </body>
 </html>
