graph with ugly colors

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
     <div id="myDiv" style="width: 480px; height: 300px;"></div>
     <script>
-Graph(arrayOfSentTweets)
+Graph(arrayOfSentTweets);
     </script>
     <div>
         <ol data-role="listview" id="example1" >
